# avtor-rs

./: Cargo.toml  docker-compose.yaml
avtor-cli/: Cargo.toml
avtor-cli/src/: main.rs
avtor-cli/src/migrations/: migration_01.rs  mod.rs  run_migrations.rs
avtor-core/: Cargo.toml
avtor-core/src/: lib.rs
avtor-core/src/common/: mod.rs
avtor-core/src/models/: common.rs  invitations.rs  migrations.rs  mod.rs  users.rs
avtor-core/src/postgres_common/: core.rs
avtor-core/src/repo/: user_repo.rs
config/: local.env
migrations/: 0.sql
