[package]
name = "avtor-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avtor-core = { path = "../avtor-core" }
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-postgres = { version = "0.7.5", features=["with-uuid-0_8", "with-chrono-0_4"] }
serde = "1.0"
serde_yaml = "0.8"
dotenv = "0.15.0"