[package]
name = "avtor-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tokio-postgres = { version = "0.7.5", features=["with-uuid-0_8", "with-chrono-0_4"] }
thiserror = "1.0"
postgres-derive = "*"
postgres-types = { version = "*", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "*"
futures = "0.3"
paste = "*"
validator = { version = "0.12", features = ["derive"] }

